# bsindy-slides

./: .gitignore  .gitmodules  BSINDY.html  BSINDY.qmd  README.md  _quarto.yml  pyproject.toml  refs.bib
src/bsindy_slides/: __init__.py  van_der_pol.py
