[project]
name = "bsindy-slides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "pysindy==2.0.0rc3",
    "ipython>=9.4.0",
    "pyyaml>=6.0.2",
    "nbformat>=5.10.4",
    "notebook>=7.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
